feat: use a lighter-weight liveness probe for atuin

--- a/kustomization/components/atuin/deployment.yml
+++ b/kustomization/components/atuin/deployment.yml
@@ -37,6 +37,7 @@ spec:
           image: ghcr.io/atuinsh/atuin
           livenessProbe:
             httpGet:
+              path: /healthz
               port: web
             initialDelaySeconds: 5
             periodSeconds: 15
