fix: pin pvc that was restored from longhorn backup

--- a/kustomization/components/paperless/kustomization.yml
+++ b/kustomization/components/paperless/kustomization.yml
@@ -10,3 +10,7 @@ patches:
     target:
       kind: StatefulSet
       name: paperless
+  - path: patches/pin_pvc_paperless-media.yml
+    target:
+      kind: PersistentVolumeClaim
+      name: paperless-media
