fix: use correct port name for authelia liveness probe

--- a/kustomization/overlays/prod/traefik/patches/authelia/add_container.yml
+++ b/kustomization/overlays/prod/traefik/patches/authelia/add_container.yml
@@ -45,7 +45,7 @@ spec:
           livenessProbe:
             httpGet:
               path: /api/health
-              port: web
+              port: auth-web
               scheme: HTTP
             periodSeconds: 15
             successThreshold: 1
