feat: install opkssh into Mack images (with default config)

--- a/images/mack/Containerfile
+++ b/images/mack/Containerfile
@@ -5,6 +5,8 @@ COPY build_files /
 # This is the base image.
 FROM quay.io/fedora/fedora-bootc:42@sha256:ebe9cd10da14dd2eef1763669021755b2df5d9e4dbf78285576cd7664a73ad15
 
+ARG TARGETPLATFORM
+
 RUN --mount=type=bind,from=ctx,source=/,target=/ctx \
     --mount=type=cache,dst=/var/cache \
     --mount=type=cache,dst=/var/log \
