fix: adjust regex for shell scripts to maybe get renovate to catch this

--- a/renovate.json
+++ b/renovate.json
@@ -17,7 +17,7 @@
         "/(^|/|\\.).*\\.sh$/"
       ],
       "matchStrings": [
-        "\\srenovate:\\s+datasource=(?<datasource>.*?)\\sdepName=(?<depName>.*?)\\n\\s*[a-zA-Z_]+=\"?(?<currentValue>.*?)\"?"
+        "\\srenovate:\\s+datasource=(?<datasource>.*?)\\sdepName=(?<depName>.*?)\\n\\s*[a-zA-Z_]+=\"?(?<currentValue>.*?)\"?\\s"
       ]
     },
     {
