fix: properly setup selinux for opkssh

--- a/images/mack/build_files/opkssh/etc/ssh/sshd_config.d/60-opkssh.conf
+++ b/images/mack/build_files/opkssh/etc/ssh/sshd_config.d/60-opkssh.conf
@@ -1,2 +1,2 @@
-AuthorizedKeysCommand /usr/local/bin/opkssh verify %u %k %t
+AuthorizedKeysCommand /usr/bin/opkssh verify %u %k %t
 AuthorizedKeysCommandUser opksshuser
