--- a/plays/hosts/choros.tswn.us/tasks.yml
+++ b/plays/hosts/choros.tswn.us/tasks.yml
@@ -298,6 +298,7 @@
           [Interface]
           Address = 10.11.2.30/32
           ListenPort = 51823
+          MTU = 1280
           PrivateKey = {{ wireguard__privkey }}
 
           {% for hostname in groups['hogsflixplus'] %}
