--- a/images/mack/Containerfile
+++ b/images/mack/Containerfile
@@ -15,4 +15,5 @@ RUN --mount=type=bind,from=ctx,source=/,target=/ctx \
     ostree container commit
 
 # Verify final image and contents are correct.
-RUN bootc container lint
+RUN --mount=type=bind,from=ctx,source=/,target=/ctx \
+    /ctx/lint.sh
