--- a/images/mack/Containerfile
+++ b/images/mack/Containerfile
@@ -15,5 +15,4 @@ RUN --mount=type=bind,from=ctx,source=/,target=/ctx \
     ostree container commit
 
 # Verify final image and contents are correct.
-RUN --mount=type=bind,from=ctx,source=/,target=/ctx \
-    /ctx/lint.sh
+RUN bootc container lint
